--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -13,7 +13,7 @@ spec:
     spec:            
       containers:
       - name: api
-        image: leandroschwab/pedelogo-catalogo:latest
+        image: leandroschwab/pedelogo-catalogo:{{tag}}
         ports:
         - containerPort: 80
         imagePullPolicy: Always
